<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">HybridHTMLEmbeddedAuto</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="return_menu" translatable="false">Return to main menu</string>
    <string name="test" translatable="false">Is this a test?</string>
    <string name="cxa_setting" translatable="false">CXA Setting</string>
    <string name="cxa_portal_environment" translatable="false">CXA Portal Environment</string>
    <string name="go_back" translatable="false"> Go Back</string>
    <string name="app_key" translatable="false">App Key:</string>
    <string name="post_message_url" translatable="false"> Post Message URL:</string>
    <string name="save_setting" translatable="false">Save Setting</string>
    <string name="dialog" translatable="false">Dialog Webview</string>
</resources>
